--- a/server/package.json
+++ b/server/package.json
@@ -9,6 +9,7 @@
   "author": "Avesek",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.6.5",
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "mongoose": "^8.0.3",
